Fixed table horizontal scrolling issue

--- a/frontend/src/components/filter-table/filter-table.css
+++ b/frontend/src/components/filter-table/filter-table.css
@@ -50,7 +50,7 @@
 }
 
 .table {
-    overflow: hidden;
+    overflow: scroll;
 }
 
 .table-header {
@@ -83,6 +83,7 @@
     border-bottom: 1px solid rgba(167, 182, 194, 0.4);
     box-shadow: 0px 3px 8px -3px rgba(167, 182, 194, 0.5);
     user-select: none;
+    width: fit-content;
 }
 .th {
     display: flex !important;
@@ -109,6 +110,7 @@
     padding-left: 0.7em;
     white-space: nowrap;
     overflow: hidden;
+    text-align: center;
 }
 .delete-col,
 .selection-checkbox {
